--- a/projet/templates/workday/summary.html.twig
+++ b/projet/templates/workday/summary.html.twig
@@ -7,10 +7,9 @@
 {% block content %}
 
 <section>
-    <h1>new workday </h1>
+    <h1>new workday Summary </h1>
 
     {%dump(workday)%}
-
 
 </section>
 {% endblock %}
