new entry - eventlistener

--- a/projet/templates/workday/new_workday.html.twig
+++ b/projet/templates/workday/new_workday.html.twig
@@ -11,22 +11,24 @@
 
 
     {{ form_start(form, {'action': path('new-workday'), 'method': 'POST'}) }}
-    <div class="form-group">
-        {{ form_label(form.date) }}
-        {{ form_widget(form.date) }}
-    </div>
-    <div class="form-group">
-        {{ form_label(form.site) }}
-        {{ form_widget(form.site) }}
-    </div>
-    <div class="form-group">
-        {{ form_label(form.workers) }}
-        {{ form_widget(form.workers) }}
-    </div>
+    {#<div class="form-group">#}
+        {#{{ form_label(form.date) }}#}
+        {#{{ form_widget(form.date) }}#}
+    {#</div>#}
+    {#<div class="form-group">#}
+        {#{{ form_label(form.site) }}#}
+        {#{{ form_widget(form.site) }}#}
+    {#</div>#}
+    {#<div class="form-group">#}
+        {#{{ form_label(form.workers) }}#}
+        {#{{ form_widget(form.workers) }}#}
+    {#</div>#}
 
-    {{ form_widget(form.next) }}
+    {#{{ form_widget(form.next) }}#}
 
 
-    {{ form_end(form, {'render_rest': false}) }}
+    {#{{ form_end(form, {'render_rest': false}) }}#}
+    {{ form_end(form) }}
+
 </section>
 {% endblock %}
