new entry - finaly!

--- a/projet/templates/workday/summary.html.twig
+++ b/projet/templates/workday/summary.html.twig
@@ -9,7 +9,10 @@
 <section>
     <h1>new workday Summary </h1>
 
-    {%dump(workday)%}
+    {{ dump(workday) }}
+    {#<a href="{{ path('new-workday-2', {'workdayId': workday.id , 'action': 'back'}) }}">Back</a>#}
+    {#<br/>#}
+    {#<a href="{{ path('new-workday-2', {'workdayId': workday.id , 'action': 'submit'}) }}">OK!</a>#}
 
 </section>
 {% endblock %}
