--- a/projet/templates/workday/new_workday2.html.twig
+++ b/projet/templates/workday/new_workday2.html.twig
@@ -9,7 +9,7 @@
 <section>
     <h1>new workday 2</h1>
 
-    {{ form_start(form, {'action': path('new-workday-3'), 'method': 'POST'}) }}
+    {{ form_start(form, {'action': path('new-workday-2', {'workdayId': form.vars.data.id}), 'method': 'POST'}) }}
 
 
     {#{{ form_row(form.workers) }}#}
