--- a/projet/public/css/style.less
+++ b/projet/public/css/style.less
@@ -723,7 +723,7 @@ html body {
 
       }
     }
-    .new-entry{
+    .new-workday{
       display:block;
       border-radius: 50%;
       background-color: white;
