--- a/projet/templates/lib/menu.html.twig
+++ b/projet/templates/lib/menu.html.twig
@@ -16,7 +16,7 @@
             <li><a href="/Matériaux/">{% trans %}Matériaux{% endtrans %}</a></li>
         </ul>
         <ul class="navigation-right">
-            <li><a class ="new-entry" href="{{ path('new-workday') }}">N</a></li>
+            <li><a class ="new-workday" href="{{ path('new-workday') }}">N</a></li>
             <li><a href="/notification/">n</a></li>
             <li><a href="/param/">p</a></li>
 
