--- a/projet/templates/workday/edit_workday.html.twig
+++ b/projet/templates/workday/edit_workday.html.twig
@@ -9,7 +9,7 @@
 <section>
     <h1>new workday </h1>
 
-    {{ form_start(form, {'action': path('workday-edit', {'workdayId': form.vars.data.id}),, 'method': 'POST'}) }}
+    {{ form_start(form, {'action': path('workday-edit', {'workdayId': form.vars.data.id}), 'method': 'POST'}) }}
     {#<div class="form-group">#}
         {#{{ form_label(form.date) }}#}
         {#{{ form_widget(form.date) }}#}
