--- a/projet/templates/workday/edit_workday.html.twig
+++ b/projet/templates/workday/edit_workday.html.twig
@@ -7,7 +7,7 @@
 {% block content %}
 
 <section>
-    <h1>new workday </h1>
+    <h1>edit workday </h1>
 
     {{ form_start(form, {'action': path('workday-edit', {'workdayId': form.vars.data.id}), 'method': 'POST'}) }}
     {#<div class="form-group">#}
